--- a/programs/tokenized-vault/Cargo.toml
+++ b/programs/tokenized-vault/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "token-factory"
+name = "tokenized-vault"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "token_factory"
+name = "tokenized_vault"
 
 [features]
 default = []
